--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "susy": "~2.1.3"
+    "susy": "~2.1.3",
+    "jquery-parallax": "https://github.com/IanLunn/jQuery-Parallax.git#~1.1.3"
   }
 }
